--- a/swift-tableview-sample/Base.lproj/Main.storyboard
+++ b/swift-tableview-sample/Base.lproj/Main.storyboard
@@ -19,24 +19,40 @@
                                 <rect key="frame" x="0.0" y="120" width="414" height="742"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="TyN-UD-gHT" style="IBUITableViewCellStyleDefault" id="tA8-SV-icO">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="tableCell" rowHeight="100" id="tA8-SV-icO" customClass="TableViewCell" customModule="swift_tableview_sample" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tA8-SV-icO" id="h0v-lW-eh2">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="383" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TyN-UD-gHT">
-                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Roman Emperor" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R7W-L6-325">
+                                                    <rect key="frame" x="236" y="38" width="139" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="traianvs" translatesAutoresizingMaskIntoConstraints="NO" id="hQO-BT-jSc">
+                                                    <rect key="frame" x="8" y="20" width="100" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="PtH-JA-uUO"/>
+                                                        <constraint firstAttribute="height" constant="100" id="akz-9A-63C"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="R7W-L6-325" firstAttribute="centerY" secondItem="h0v-lW-eh2" secondAttribute="centerY" id="82e-mP-0fQ"/>
+                                                <constraint firstItem="hQO-BT-jSc" firstAttribute="leading" secondItem="h0v-lW-eh2" secondAttribute="leading" constant="8" id="k6B-BW-RyR"/>
+                                                <constraint firstAttribute="trailing" secondItem="R7W-L6-325" secondAttribute="trailing" constant="8" id="lyY-dv-2x8"/>
+                                                <constraint firstItem="hQO-BT-jSc" firstAttribute="top" secondItem="h0v-lW-eh2" secondAttribute="top" constant="20" symbolic="YES" id="psj-5u-V0i"/>
+                                                <constraint firstAttribute="bottom" secondItem="hQO-BT-jSc" secondAttribute="bottom" constant="20" symbolic="YES" id="vsy-H6-QoH"/>
+                                                <constraint firstItem="R7W-L6-325" firstAttribute="centerY" secondItem="hQO-BT-jSc" secondAttribute="centerY" id="y5j-FC-PGO"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="7a2-30-MsD" kind="show" id="6Cf-qQ-dqI"/>
+                                            <outlet property="emperorImage" destination="hQO-BT-jSc" id="edM-hN-zF3"/>
+                                            <outlet property="emperorName" destination="R7W-L6-325" id="LSP-p1-c6i"/>
+                                            <segue destination="7a2-30-MsD" kind="show" identifier="toDetail" id="6Cf-qQ-dqI"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -65,7 +81,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="tableView" destination="ZTC-Wl-5jI" id="YQR-Di-FTn"/>
+                        <outlet property="tableView" destination="ZTC-Wl-5jI" id="R2v-46-P7x"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -122,6 +138,11 @@
                         <viewLayoutGuide key="safeArea" id="kkL-GI-7Qn"/>
                     </view>
                     <navigationItem key="navigationItem" id="WHO-yW-x9n"/>
+                    <connections>
+                        <outlet property="emperorDescription" destination="fMx-Wt-q1O" id="faE-Wb-fFS"/>
+                        <outlet property="emperorImage" destination="KPX-xc-kXp" id="NlZ-Xl-DFc"/>
+                        <outlet property="emperorName" destination="Zxh-rW-2fU" id="2MM-Fy-12q"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aS6-iu-pGc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
